--- a/force-app/main/default/classes/RoomCallOutPractice.cls
+++ b/force-app/main/default/classes/RoomCallOutPractice.cls
@@ -6,7 +6,7 @@ public class RoomCallOutPractice {
         HttpRequest request = new HttpRequest();
         request.setEndpoint('https://medunna.com/api/rooms');
         request.setMethod('GET');
-        request.setHeader('Authorization', 'Bearer eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJkZXZlbG9wZXJzNjY2NyIsImF1dGgiOiJST0xFX0FETUlOIiwiZXhwIjoxNjkxNzcyNDkxfQ.poC2fY19mTnEUtD6J7fW9ZmLKni6p16-4oGRbw_zb2P1Ha7LilwznW7pxOc99r6C31V9LbGUbqbctFXzyqc5-w');
+        request.setHeader('Authorization', 'eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJkZXZlbG9wZXJzNjY2NyIsImF1dGgiOiJST0xFX0FETUlOIiwiZXhwIjoxNjkxNzcyNDkxfQ.poC2fY19mTnEUtD6J7fW9ZmLKni6p16-4oGRbw_zb2P1Ha7LilwznW7pxOc99r6C31V9LbGUbqbctFXzyqc5-w');
        HttpResponse response = http.send(request);
         
         System.debug('Status 	Code: '+ response.getStatusCode());
